Split first-login password endpoint
